# test

./: CMakeLists.txt  ft_split.c  tags  test_ft_split.c
include/: ft_split.h
src/: ft_split.c
test_src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_ft_split.c
